2011-03-01  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.78 released.

        * Updated POD documentation to include new instructions
          on how to pass multiple selections to sub menus, and
          use anonymous subroutines or closures with macros to
          transform those selections before presenting them to
          user in the next layer menuing.


2011-02-14  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.77 released.

        * Fixed '$numbor' accuracy when storing in FullAuto Plan.


2011-02-06  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.76 released.

        * Put in test for HASH ref for Module Conditional. Installation
          was broken in Ubuntu with new 'use strict' pragma in use.


2011-02-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.75 released.

        * Fixed %Config::Config is read-only bug that was
          breaking CPAN testing reports.


2011-02-02  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.74 released.

        * New Macro work complete. New Macro array indicators
          and delimiter indicators.

        * All new documentation will accompany the release
          of Term::Menus 2.0. - to co-incide with the 
          1.0 Release of Net::FullAuto.


2011-01-31  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.73 released.

        * Lots more code added to improve submenus.
          Now complete.

        * Removed embedded Term::RawInput since Term::RawInput
          is now available as a stand-alone CPAN module.


2011-01-23  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>

        * Version 1.72 released.

        * Fixed return for &pickone.

        * Lots of code added to improve submenus. Added code
          to enable multiple choice menus to be included in
          submenu tree - and convey results to child menus,