@@ -14,10 +14,10 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 0190bfe1b31a8589fcb7474c4d96a65123cd0a18 ChangeLog
+SHA1 3cf47c644fafa72e4f8d2978bd81d195cab4d536 ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 536d4ce30b1934be585da55e463477877c31fe8c MANIFEST
-SHA1 6c8ddfef0a84c2c05396b3466c54791a991e76fc META.yml
+SHA1 0f96f3d703a1b4e48f98e67530b2d01047b03f3d META.yml
 SHA1 14e358b68232b26478c491ba66290d4dc07ae02a Makefile.PL
 SHA1 dd0ef50a94b1bbe303b0f05c353dfe97cda04f3b README
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
@@ -31,13 +31,13 @@ SHA1 b721c93ca5bc9a6aa863b49af15f1b1de6125935 inc/Module/Install/Makefile.pm
 SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 6fba23f0a82f61614d6aeefbb0acbd459c5cbabd lib/Term/Menus.pm
+SHA1 5ff6de55a2616b2fdfdd567054af2fb073c46a58 lib/Term/Menus.pm
 SHA1 7f2e13f5f6a798d52ea897d24d07b49af4039341 t/0-signature.t
 SHA1 ded9def7d10cf71606da96112acc159e0aa9a582 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAk1tDnUACgkQdsVAdUjO9InF/gCfcVFP0SgHeoEAvtX6Tg8XCvha
-GJsAoIoKzKGldCfV71wgkQRf5+E9q4MD
-=tiRW
+iEYEARECAAYFAk1xCMEACgkQdsVAdUjO9InhMACgkgKiu06Iryk60yc/jQIWNltj
+v0kAn2Y1iywR5lNT0AnY44pXkvX6DDoc
+=gLed
 -----END PGP SIGNATURE-----
